Need to keep !important to fix the alignment issue.
Conflicts:
	extras/www/static/css/core.css

--- a/extras/www/static/css/core.css
+++ b/extras/www/static/css/core.css
@@ -219,3 +219,6 @@ A.noclick {
 .relationship_confidence_edit {
     width:75px;
 }
+.ui-tabs .ui-tabs-nav li.ui-tabs-active {
+    margin-bottom:-2px !important;
+}
